time-greet-services/iteration-14-kubernetes/part-c-ingress-networking/k8s/greeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-service
  namespace: demo
  labels:
    app: greeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greeting-service
  template:
    metadata:
      labels:
        app: greeting-service
    spec:
      containers:
        - name: greeting-service
          image: greeting-service:1.0.0
          ports:
            - containerPort: 9001
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9001
            initialDelaySeconds: 15
            periodSeconds: 5
