time-greet-services/iteration-14-kubernetes/part-c-ingress-networking/k8s/time-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-service
  namespace: demo
  labels:
    app: time-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time-service
  template:
    metadata:
      labels:
        app: time-service
    spec:
      containers:
        - name: time-service
          image: time-service:1.0.0
          ports:
            - containerPort: 9002
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9002
            initialDelaySeconds: 15
            periodSeconds: 5
