time-greet-services/iteration-14-kubernetes/part-c-ingress-networking/k8s/time-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: time-service
  ports:
    - port: 9002
      targetPort: 9002
