time-greet-services/iteration-14-kubernetes/part-c-ingress-networking/k8s/ingress-host-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-host
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: greeting.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greeting-service
                port:
                  number: 9001
    - host: time.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: time-service
                port:
                  number: 9002
