time-greet-services/iteration-14-kubernetes/part-c-ingress-networking/k8s/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-tls
  namespace: demo
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.local
      secretName: demo-tls-secret
  rules:
    - host: demo.local
      http:
        paths:
          - path: /greeting
            pathType: Prefix
            backend:
              service:
                name: greeting-service
                port:
                  number: 9001
          - path: /time
            pathType: Prefix
            backend:
              service:
                name: time-service
                port:
                  number: 9002
